// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice should render a default component 1`] = `
<h2
  className="notice deprecation"
>
  Deprecation Notice
  <p
    className="paragraph"
  />
</h2>
`;

exports[`Notice should render a deprecation notice with text 1`] = `
<h2
  className="notice deprecation"
>
  Deprecation Notice
  <p
    className="paragraph"
  >
    notice text
  </p>
</h2>
`;

exports[`Notice should render a maintenance notice with text 1`] = `
<h2
  className="notice maintenance"
>
  Component in Maintenance
  <p
    className="paragraph"
  >
    notice text
  </p>
</h2>
`;
